--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -72,10 +72,15 @@
 			bottom :0; 
 			right :0; 
 			width : 300px; 
-			height : 15px; 
+			height : 15px;
+			cursor : pointer; 
 			background : red; 
+			border-radius: 5px 0 0 0;
 			z-index :1;
 		}
+			.spa-shell-chat:hover{
+				background : #a00;
+			}
 		.spa-shell-modal {
 			margin-top : -200px;
 			margin-left: -200px;
